# pvr.mythtv

./: .travis.yml  CMakeLists.txt  README.md  index.html
cmake/: addon-helpers.cmake
debian/: changelog  control  rules
download/: index.html
lib/cppmyth/: CMakeLists.txt
lib/cppmyth/src/: mythwsapi.cpp
lib/kodi/: CMakeLists.txt  refresh_kodi.sh
lib/p8-platform/: CMakeLists.txt
lib/p8-platform/src/util/: timeutils.h
lib/zlib/: CMakeLists.txt
pvr.mythtv/: addon.xml.in  changelog.txt
pvr.mythtv/resources/: settings.xml
pvr.mythtv/resources/language/resource.language.bg_bg/: strings.po
pvr.mythtv/resources/language/resource.language.cs_cz/: strings.po
pvr.mythtv/resources/language/resource.language.da_dk/: strings.po
pvr.mythtv/resources/language/resource.language.de_de/: strings.po
pvr.mythtv/resources/language/resource.language.en_au/: strings.po
pvr.mythtv/resources/language/resource.language.en_gb/: strings.po
pvr.mythtv/resources/language/resource.language.en_nz/: strings.po
pvr.mythtv/resources/language/resource.language.en_us/: strings.po
pvr.mythtv/resources/language/resource.language.es_es/: strings.po
pvr.mythtv/resources/language/resource.language.es_mx/: strings.po
pvr.mythtv/resources/language/resource.language.fr_ca/: strings.po
pvr.mythtv/resources/language/resource.language.fr_fr/: strings.po
pvr.mythtv/resources/language/resource.language.hu_hu/: strings.po
pvr.mythtv/resources/language/resource.language.nl_nl/: strings.po
src/: avinfo.cpp  client.cpp  client.h  cppmyth.h  demux.cpp  demux.h  epgpool.cpp  epgpool.h  pvrclient-launcher.cpp  pvrclient-mythtv.cpp  pvrclient-mythtv.h
src/cppmyth/: MythProgramInfo.cpp  MythProgramInfo.h  MythScheduleHelper75.cpp  MythScheduleHelper76.cpp  MythScheduleManager.cpp
